--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -37,6 +37,10 @@ models:
     # Applies to all files under models/example/
     example:
       materialized: view
+    staging:
+      schema: DESAFIO_LH
+    marts:
+      schema: DESAFIO_LH
 
 
 seeds:
