--- a/profiles.yml
+++ b/profiles.yml
@@ -8,7 +8,7 @@ default:
       password: "{{ env_var('DB_PASSWORD') }}"          
       warehouse: COMPUTE_WH                 
       database: DESAFIO_LH                      
-      schema: DESAFIO_LH                            
+      schema: sap_adw                           
       role: ACCOUNTADMIN                         
       threads: 4                                
       authenticator: snowflake                   
