Envio da modelagem.

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -38,11 +38,14 @@ models:
     example:
       materialized: view
     staging:
-      schema: DESAFIO_LH
+      schema: STAGING
       materialized: table
     marts:
-      schema: DESAFIO_LH
+      schema: MARTS
       materialized: table
+    # intermediate:
+      # schema: INTERMEDIATE
+      # materialized: table
 
 seeds:
   desafio_final: # <-- Name of the project. If you renamed your project you have to change this as well
